Add : update TP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 # utilisation de vos paramètres de connexion
-#spring.datasource.url=jdbc:postgresql://u8kyhchmvvlxnxgdxmjc:LdxqTcjrZ0T9bdEyIbEv@bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
-#spring.datasource.username=u8kyhchmvvlxnxgdxmjc
-#spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
+spring.datasource.url=jdbc:postgresql://u8kyhchmvvlxnxgdxmjc:LdxqTcjrZ0T9bdEyIbEv@bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
+spring.datasource.username=u8kyhchmvvlxnxgdxmjc
+spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
 
 # personnalisation de hibernate
-#spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # personnalisation du pool de connexions
-#spring.datasource.hikari.maximum-pool-size=1
+spring.datasource.hikari.maximum-pool-size=1
 
 # on demande un niveau de logs TRACE à spring-web
 logging.level.web=TRACE
 # on modifie le port découte du tomcat !
-server.port=8081
+#server.port=8081
 
 
