Add : update TP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # utilisation de vos paramètres de connexion
-spring.datasource.url=jdbc:postgresql://u8kyhchmvvlxnxgdxmjc:LdxqTcjrZ0T9bdEyIbEv@bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
-spring.datasource.username=u8kyhchmvvlxnxgdxmjc
-spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
+#spring.datasource.url=jdbc:postgresql://bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
+#spring.datasource.username=u8kyhchmvvlxnxgdxmjc
+#spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
 
 # personnalisation de hibernate
 spring.jpa.hibernate.ddl-auto = create-drop
@@ -12,6 +12,8 @@ spring.datasource.hikari.maximum-pool-size=1
 # on demande un niveau de logs TRACE à spring-web
 logging.level.web=TRACE
 # on modifie le port découte du tomcat !
-#server.port=8081
+server.port=8081
 
 
+spring.security.user.name=user
+spring.security.user.password=7beb05f6-5c68-11ea-bc55-0242ac130003
