Update : changement connexion bdd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # utilisation de vos paramètres de connexion
-#spring.datasource.url=jdbc:postgresql://bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
-#spring.datasource.username=u8kyhchmvvlxnxgdxmjc
-#spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
+spring.datasource.url=jdbc:postgresql://bmsisupppah1ozufhygz-postgresql.services.clever-cloud.com:5432/bmsisupppah1ozufhygz
+spring.datasource.username=u8kyhchmvvlxnxgdxmjc
+spring.datasource.password=LdxqTcjrZ0T9bdEyIbEv
 
 # personnalisation de hibernate
 spring.jpa.hibernate.ddl-auto = create-drop
